--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
     "daisyui": "^2.51.5",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
