--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.5.0",
     "@devexpress/dx-react-core": "^4.0.3",
     "@devexpress/dx-react-grid": "^4.0.3",
     "@devexpress/dx-react-grid-material-ui": "^4.0.3",
