--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-slick": "^0.29.0",
+    "react-typing-effect": "^2.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
