--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
+    "alpinejs": "^3.12.0",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.5",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "highlight.js": "^11.7.0",
+    "katex": "^0.16.7",
+    "mongodb": "^5.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "rrule": "^2.7.2",
     "react-slick": "^0.29.0",
     "react-typing-effect": "^2.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "react-quill": "^2.0.0",
+    "rrule": "^2.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
