--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-slick": "^0.29.0",
-    "react-typing-effect": "^2.0.5",
-    "slick-carousel": "^1.8.1",
     "react-quill": "^2.0.0",
-    "rrule": "^2.7.2"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.2",
+    "react-typing-effect": "^2.0.5",
+    "rrule": "^2.7.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
