--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.0",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "alpinejs": "^3.12.0",
     "axios": "^1.4.0",
     "daisyui": "^2.51.5",
@@ -36,7 +38,8 @@
     "react-toastify": "^9.1.2",
     "react-typing-effect": "^2.0.5",
     "rrule": "^2.7.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "stripe": "^12.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
