--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "alpinejs": "^3.12.0",
     "axios": "^1.4.0",
     "daisyui": "^2.51.5",
+    "emoji-picker-react": "^4.4.9",
+    "firebase": "^9.21.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "highlight.js": "^11.7.0",
     "katex": "^0.16.7",
+    "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "next": "13.2.4",
     "react": "18.2.0",
