--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "alpinejs": "^3.12.0",
     "axios": "^1.4.0",
     "daisyui": "^2.51.5",
+    "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.9",
     "firebase": "^9.21.0",
     "flowbite": "^1.6.4",
