--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "agora-react-uikit": "^1.2.0",
     "alpinejs": "^3.12.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "daisyui": "^2.51.5",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.9",
