--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.3.0",
     "next": "13.2.4",
+    "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
